src/test/deca/context/invalid/homemade/comp_dif_types_decompile.res
{
	int a = 1;
	boolean b = true;
	if ((a == b)) {
		(a = 2);
	}
}
